--- a/Latest5.ipynb
+++ b/Latest5.ipynb
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "sWBdL86GDCKu",
         "colab_type": "code",
-        "outputId": "05fce418-2db3-46c1-a384-436ec31b42fb",
+        "outputId": "2fd87a2a-e565-487e-f3f2-db21d05be7ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
@@ -128,7 +128,7 @@
         "print(df.shape)\n",
         "df.head(5)"
       ],
-      "execution_count": 104,
+      "execution_count": 221,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +429,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 104
+          "execution_count": 221
         }
       ]
     },
@@ -451,7 +451,7 @@
       "metadata": {
         "id": "Yn0GPWPFJNKj",
         "colab_type": "code",
-        "outputId": "d158ec9d-e05c-4b56-c532-a72a65898eed",
+        "outputId": "d277d713-b0fa-4d2a-9935-80d1d5419dfd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -476,7 +476,7 @@
         "print(train.shape)\n",
         "print(test.shape)"
       ],
-      "execution_count": 106,
+      "execution_count": 223,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,7 +497,7 @@
       },
       "source": [
         "# Create a copy of full_address to add back to the final dataframe for display\n",
-        "test_addr = pd.DataFrame(test, columns = ['full_address'])\n",
+        "test_addr = pd.DataFrame(test, columns = ['full_address', 'neighborhood'])\n",
         "test_addr = test_addr.reset_index()"
       ],
       "execution_count": 0,
@@ -508,7 +508,7 @@
       "metadata": {
         "id": "_pmaRSJ55vYc",
         "colab_type": "code",
-        "outputId": "36e14cb6-edf4-48b2-b82b-9cce3390259b",
+        "outputId": "608b5588-f4c4-497f-b515-fce9406c758a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -523,7 +523,7 @@
         "mae = mean_absolute_error(y_actual, y_pred)\n",
         "print('Baseline MAE = ', mae)"
       ],
-      "execution_count": 108,
+      "execution_count": 225,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +685,7 @@
       "metadata": {
         "id": "87HIQII5SbJ2",
         "colab_type": "code",
-        "outputId": "05ba0b14-c62d-46b4-dd9c-163e92e20aef",
+        "outputId": "06accf9a-d027-43e1-a95f-a656848065fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -695,7 +695,7 @@
         "print(train.shape)\n",
         "train.head()"
       ],
-      "execution_count": 111,
+      "execution_count": 228,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,7 +870,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 111
+          "execution_count": 228
         }
       ]
     },
@@ -879,7 +879,7 @@
       "metadata": {
         "id": "eVORTUrgSXhS",
         "colab_type": "code",
-        "outputId": "ff1742cf-e57b-4d36-8a43-582c00dd05df",
+        "outputId": "98187eb3-f6d5-4f82-9231-e84d1b77daa1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -889,7 +889,7 @@
         "print(test.shape)\n",
         "test.head()"
       ],
-      "execution_count": 112,
+      "execution_count": 229,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,7 +1064,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 112
+          "execution_count": 229
         }
       ]
     },
@@ -1090,7 +1090,7 @@
       "metadata": {
         "id": "rYWZrxMfJnwY",
         "colab_type": "code",
-        "outputId": "9ba315a6-6ca2-4a81-aa15-6b561831e2b5",
+        "outputId": "e61344b3-0303-464e-f6a7-63abba40345b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -1100,7 +1100,7 @@
         "print(train.shape)\n",
         "train.head()"
       ],
-      "execution_count": 114,
+      "execution_count": 231,
       "outputs": [
         {
           "output_type": "stream",
@@ -1275,7 +1275,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 114
+          "execution_count": 231
         }
       ]
     },
@@ -1284,7 +1284,7 @@
       "metadata": {
         "id": "YmE3VreuJqlb",
         "colab_type": "code",
-        "outputId": "8dc9e9fb-a75a-4273-c609-5fa9f4587612",
+        "outputId": "5301c5bd-4a32-4c2d-b993-2aae71b83b3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -1294,7 +1294,7 @@
         "print(test.shape)\n",
         "test.head()"
       ],
-      "execution_count": 115,
+      "execution_count": 232,
       "outputs": [
         {
           "output_type": "stream",
@@ -1469,7 +1469,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 115
+          "execution_count": 232
         }
       ]
     },
@@ -1491,7 +1491,7 @@
       "metadata": {
         "id": "HqDPADa-CCGZ",
         "colab_type": "code",
-        "outputId": "ebe027e3-56d4-40af-a7b0-01059c038692",
+        "outputId": "6be13745-16c5-4bda-af8b-337ae904625e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1505,7 +1505,7 @@
         "val  = temp[temp['year_sold'] >= 2017]\n",
         "print(train.shape, val.shape, test.shape)"
       ],
-      "execution_count": 117,
+      "execution_count": 234,
       "outputs": [
         {
           "output_type": "stream",
@@ -1521,7 +1521,7 @@
       "metadata": {
         "id": "kFxdeaqTEMzC",
         "colab_type": "code",
-        "outputId": "8c30c8f4-ce8f-484f-b8d4-eaa44d647b2e",
+        "outputId": "453bf462-b276-4157-a991-a7d4418f9574",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -1567,7 +1567,7 @@
         "print('Test Mean Absolute Error:', test_mae)\n",
         "print('Test R^2:', test_r2)"
       ],
-      "execution_count": 118,
+      "execution_count": 235,
       "outputs": [
         {
           "output_type": "stream",
@@ -1592,7 +1592,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 462
         },
-        "outputId": "bb80ad3b-2fd8-4eae-bfd1-35c94f215b57"
+        "outputId": "3a9de338-8f72-499b-ceaf-a949439277fb"
       },
       "source": [
         "# Add the prediction, difference and address to the final dataframe\n",
@@ -1603,15 +1603,16 @@
         "final['prediction'] = final['prediction'].astype(int)\n",
         "final['difference'] = final['difference'].astype(int)\n",
         "final['full_address'] = test_addr['full_address']\n",
+        "final['neighborhood'] = test_addr['neighborhood']\n",
         "print(final.shape)\n",
         "final.head()"
       ],
-      "execution_count": 119,
+      "execution_count": 236,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(2161, 22)\n"
+            "(2161, 23)\n"
           ],
           "name": "stdout"
         },
@@ -1659,6 +1660,7 @@
               "      <th>prediction</th>\n",
               "      <th>difference</th>\n",
               "      <th>full_address</th>\n",
+              "      <th>neighborhood</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -1686,6 +1688,7 @@
               "      <td>3381206</td>\n",
               "      <td>-71206</td>\n",
               "      <td>618 48th Ave, San Francisco, CA 94121-2410</td>\n",
+              "      <td>1 - Outer Richmond</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1711,6 +1714,7 @@
               "      <td>1724374</td>\n",
               "      <td>-420374</td>\n",
               "      <td>1434 La Playa St, San Francisco, CA 94122</td>\n",
+              "      <td>2 - Outer Sunset</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1736,6 +1740,7 @@
               "      <td>1934003</td>\n",
               "      <td>-104003</td>\n",
               "      <td>1516 Great Highway, San Francisco, CA 94122</td>\n",
+              "      <td>2 - Outer Sunset</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1761,6 +1766,7 @@
               "      <td>1730725</td>\n",
               "      <td>-80725</td>\n",
               "      <td>739 48th Ave, San Francisco, CA 94121-3209</td>\n",
+              "      <td>1 - Outer Richmond</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1786,26 +1792,27 @@
               "      <td>1179391</td>\n",
               "      <td>120608</td>\n",
               "      <td>1492 La Playa St, San Francisco, CA 94122</td>\n",
+              "      <td>2 - Outer Sunset</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   index   longitude  ...  difference                                 full_address\n",
-              "0      0 -122.509190  ...      -71206   618 48th Ave, San Francisco, CA 94121-2410\n",
-              "1      1 -122.509090  ...     -420374    1434 La Playa St, San Francisco, CA 94122\n",
-              "2      2 -122.509056  ...     -104003  1516 Great Highway, San Francisco, CA 94122\n",
-              "3      3 -122.509040  ...      -80725   739 48th Ave, San Francisco, CA 94121-3209\n",
-              "4      4 -122.509020  ...      120608    1492 La Playa St, San Francisco, CA 94122\n",
+              "   index  ...        neighborhood\n",
+              "0      0  ...  1 - Outer Richmond\n",
+              "1      1  ...    2 - Outer Sunset\n",
+              "2      2  ...    2 - Outer Sunset\n",
+              "3      3  ...  1 - Outer Richmond\n",
+              "4      4  ...    2 - Outer Sunset\n",
               "\n",
-              "[5 rows x 22 columns]"
+              "[5 rows x 23 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 119
+          "execution_count": 236
         }
       ]
     },
@@ -1818,7 +1825,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "9b7c4125-6167-4c01-f533-f31ec46996da"
+        "outputId": "be5ab548-a9c8-45c7-c2d7-f01c21d9a821"
       },
       "source": [
         "# Calculate the metrics used by Zillow\n",
@@ -1838,7 +1845,7 @@
         "print('Prediction Within 10 percent - %.4f%%' % (pred_ten_percent * 100))\n",
         "print('Prediction Within 20 percent - %.4f%%' % (pred_twenty_percent * 100))"
       ],
-      "execution_count": 120,
+      "execution_count": 237,
       "outputs": [
         {
           "output_type": "stream",
@@ -1857,29 +1864,123 @@
       "metadata": {
         "id": "ih_i4GfOpnZ3",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "04012ba6-8818-471c-8c1c-7466996e8120"
       },
       "source": [
-        "# data = final[['full_address', 'neighborhood', 'nid', 'sale_price', 'prediction', 'difference']]\n",
-        "# data = data.drop_duplicates()\n",
-        "\n",
-        "# data.head()"
+        "data = final[['full_address', 'neighborhood', 'nid', 'sale_price', 'prediction', 'difference']]\n",
+        "print(data.shape)\n",
+        "data.head()"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fXxpZitbyPHB",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# data.shape"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 242,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(2161, 6)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>full_address</th>\n",
+              "      <th>neighborhood</th>\n",
+              "      <th>nid</th>\n",
+              "      <th>sale_price</th>\n",
+              "      <th>prediction</th>\n",
+              "      <th>difference</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>618 48th Ave, San Francisco, CA 94121-2410</td>\n",
+              "      <td>1 - Outer Richmond</td>\n",
+              "      <td>1050</td>\n",
+              "      <td>3310000</td>\n",
+              "      <td>3381206</td>\n",
+              "      <td>-71206</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1434 La Playa St, San Francisco, CA 94122</td>\n",
+              "      <td>2 - Outer Sunset</td>\n",
+              "      <td>2030</td>\n",
+              "      <td>1304000</td>\n",
+              "      <td>1724374</td>\n",
+              "      <td>-420374</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1516 Great Highway, San Francisco, CA 94122</td>\n",
+              "      <td>2 - Outer Sunset</td>\n",
+              "      <td>2030</td>\n",
+              "      <td>1830000</td>\n",
+              "      <td>1934003</td>\n",
+              "      <td>-104003</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>739 48th Ave, San Francisco, CA 94121-3209</td>\n",
+              "      <td>1 - Outer Richmond</td>\n",
+              "      <td>1050</td>\n",
+              "      <td>1650000</td>\n",
+              "      <td>1730725</td>\n",
+              "      <td>-80725</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1492 La Playa St, San Francisco, CA 94122</td>\n",
+              "      <td>2 - Outer Sunset</td>\n",
+              "      <td>2030</td>\n",
+              "      <td>1300000</td>\n",
+              "      <td>1179391</td>\n",
+              "      <td>120608</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                  full_address  ... difference\n",
+              "0   618 48th Ave, San Francisco, CA 94121-2410  ...     -71206\n",
+              "1    1434 La Playa St, San Francisco, CA 94122  ...    -420374\n",
+              "2  1516 Great Highway, San Francisco, CA 94122  ...    -104003\n",
+              "3   739 48th Ave, San Francisco, CA 94121-3209  ...     -80725\n",
+              "4    1492 La Playa St, San Francisco, CA 94122  ...     120608\n",
+              "\n",
+              "[5 rows x 6 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 242
+        }
+      ]
     },
     {
       "cell_type": "code",
