--- a/Latest5.ipynb
+++ b/Latest5.ipynb
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "sWBdL86GDCKu",
         "colab_type": "code",
-        "outputId": "2fd87a2a-e565-487e-f3f2-db21d05be7ab",
+        "outputId": "ab7ee82f-caf6-40a3-b8c9-3051c2c97fe7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
@@ -126,9 +126,9 @@
         "\n",
         "# Check the data\n",
         "print(df.shape)\n",
-        "df.head(5)"
+        "df.head()"
       ],
-      "execution_count": 221,
+      "execution_count": 287,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +429,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 221
+          "execution_count": 287
         }
       ]
     },
@@ -451,7 +451,7 @@
       "metadata": {
         "id": "Yn0GPWPFJNKj",
         "colab_type": "code",
-        "outputId": "d277d713-b0fa-4d2a-9935-80d1d5419dfd",
+        "outputId": "8345426f-aac4-4226-9875-4c6200b5aac8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -476,7 +476,7 @@
         "print(train.shape)\n",
         "print(test.shape)"
       ],
-      "execution_count": 223,
+      "execution_count": 289,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +508,7 @@
       "metadata": {
         "id": "_pmaRSJ55vYc",
         "colab_type": "code",
-        "outputId": "608b5588-f4c4-497f-b515-fce9406c758a",
+        "outputId": "6fa9128c-f997-41b1-87b7-32a186a67c9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -523,7 +523,7 @@
         "mae = mean_absolute_error(y_actual, y_pred)\n",
         "print('Baseline MAE = ', mae)"
       ],
-      "execution_count": 225,
+      "execution_count": 291,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,9 +644,8 @@
         "  # Drop unneeded columns\n",
         "  unneeded_columns = ['sale_date', 'on_market_date', 'city', 'state', 'street_no', 'street_suffix',\n",
         "                      'day_on_market', 'month_on_market', 'year_on_market', 'month_sold', 'day_sold', 'orig_list_price', 'cdom',\n",
-        "                      'sf_source', 'area', 'sf_source_decs', 'lot_acres', 'views', 'parking', 'full_address', 'zoning', #]\n",
-        "                      'district_no', 'district_desc',\n",
-        "                      'lot_desc', 'drive_side', 'parking_count', 'num_parking',\n",
+        "                      'sf_source', 'area', 'sf_source_decs', 'lot_acres', 'views', 'parking', 'full_address', 'zoning',\n",
+        "                      'district_no', 'district_desc', 'lot_desc', 'drive_side', 'parking_count', 'num_parking',\n",
         "                      'neighborhood', 'shopping', 'transportation', 'type']\n",
         "  X = X.drop(columns=unneeded_columns)\n",
         "  \n",
@@ -685,7 +684,7 @@
       "metadata": {
         "id": "87HIQII5SbJ2",
         "colab_type": "code",
-        "outputId": "06accf9a-d027-43e1-a95f-a656848065fc",
+        "outputId": "54ce11de-1cb2-4b91-9736-2007c8126b11",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -695,7 +694,7 @@
         "print(train.shape)\n",
         "train.head()"
       ],
-      "execution_count": 228,
+      "execution_count": 294,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,7 +869,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 228
+          "execution_count": 294
         }
       ]
     },
@@ -879,7 +878,7 @@
       "metadata": {
         "id": "eVORTUrgSXhS",
         "colab_type": "code",
-        "outputId": "98187eb3-f6d5-4f82-9231-e84d1b77daa1",
+        "outputId": "f085213e-1328-41c9-8e64-cb6d9c8fe3d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -889,7 +888,7 @@
         "print(test.shape)\n",
         "test.head()"
       ],
-      "execution_count": 229,
+      "execution_count": 295,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,7 +1063,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 229
+          "execution_count": 295
         }
       ]
     },
@@ -1090,7 +1089,7 @@
       "metadata": {
         "id": "rYWZrxMfJnwY",
         "colab_type": "code",
-        "outputId": "e61344b3-0303-464e-f6a7-63abba40345b",
+        "outputId": "a7a05c9d-0125-440b-9b16-29656656ae6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -1100,7 +1099,7 @@
         "print(train.shape)\n",
         "train.head()"
       ],
-      "execution_count": 231,
+      "execution_count": 297,
       "outputs": [
         {
           "output_type": "stream",
@@ -1275,7 +1274,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 231
+          "execution_count": 297
         }
       ]
     },
@@ -1284,7 +1283,7 @@
       "metadata": {
         "id": "YmE3VreuJqlb",
         "colab_type": "code",
-        "outputId": "5301c5bd-4a32-4c2d-b993-2aae71b83b3e",
+        "outputId": "c0b1c6f0-9722-436f-fef8-f2483a73408c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -1294,7 +1293,7 @@
         "print(test.shape)\n",
         "test.head()"
       ],
-      "execution_count": 232,
+      "execution_count": 298,
       "outputs": [
         {
           "output_type": "stream",
@@ -1469,7 +1468,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 232
+          "execution_count": 298
         }
       ]
     },
@@ -1491,7 +1490,7 @@
       "metadata": {
         "id": "HqDPADa-CCGZ",
         "colab_type": "code",
-        "outputId": "6be13745-16c5-4bda-af8b-337ae904625e",
+        "outputId": "fb4ded0a-e6ba-46ed-95ca-4e6e72ba3357",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1505,7 +1504,7 @@
         "val  = temp[temp['year_sold'] >= 2017]\n",
         "print(train.shape, val.shape, test.shape)"
       ],
-      "execution_count": 234,
+      "execution_count": 300,
       "outputs": [
         {
           "output_type": "stream",
@@ -1521,7 +1520,7 @@
       "metadata": {
         "id": "kFxdeaqTEMzC",
         "colab_type": "code",
-        "outputId": "453bf462-b276-4157-a991-a7d4418f9574",
+        "outputId": "524a092f-834a-4db8-f14a-5c6f881693cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -1567,7 +1566,7 @@
         "print('Test Mean Absolute Error:', test_mae)\n",
         "print('Test R^2:', test_r2)"
       ],
-      "execution_count": 235,
+      "execution_count": 301,
       "outputs": [
         {
           "output_type": "stream",
@@ -1592,7 +1591,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 462
         },
-        "outputId": "3a9de338-8f72-499b-ceaf-a949439277fb"
+        "outputId": "9bc1f189-9533-4602-ec1a-4a6ae2217196"
       },
       "source": [
         "# Add the prediction, difference and address to the final dataframe\n",
@@ -1607,7 +1606,7 @@
         "print(final.shape)\n",
         "final.head()"
       ],
-      "execution_count": 236,
+      "execution_count": 302,
       "outputs": [
         {
           "output_type": "stream",
@@ -1812,7 +1811,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 236
+          "execution_count": 302
         }
       ]
     },
@@ -1825,7 +1824,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "be5ab548-a9c8-45c7-c2d7-f01c21d9a821"
+        "outputId": "21753a33-0993-46b1-9577-f17da5978e02"
       },
       "source": [
         "# Calculate the metrics used by Zillow\n",
@@ -1845,7 +1844,7 @@
         "print('Prediction Within 10 percent - %.4f%%' % (pred_ten_percent * 100))\n",
         "print('Prediction Within 20 percent - %.4f%%' % (pred_twenty_percent * 100))"
       ],
-      "execution_count": 237,
+      "execution_count": 303,
       "outputs": [
         {
           "output_type": "stream",
@@ -1868,14 +1867,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "04012ba6-8818-471c-8c1c-7466996e8120"
+        "outputId": "43e5ce49-0c11-46ea-8d3a-71d4057c18f2"
       },
       "source": [
         "data = final[['full_address', 'neighborhood', 'nid', 'sale_price', 'prediction', 'difference']]\n",
         "print(data.shape)\n",
         "data.head()"
       ],
-      "execution_count": 242,
+      "execution_count": 304,
       "outputs": [
         {
           "output_type": "stream",
@@ -1978,7 +1977,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 242
+          "execution_count": 304
         }
       ]
     },
